2007-03-04  Vitaly Alexeev <tishka92@yahoo.com>

	added the processing of events from video thread (onStatus)
	* gameswf/gameswf_mutex.(cpp,h):
	* gameswf/gameswf_sound_handler_sdl.(cpp,h): struct locker
	moved from sound_handler files into gameswf_mutex files
	* gameswf/gameswf_action.h: commented the unused call_method1..3
	* gameswf/gameswf_action.cpp: added as_netconnection include
	* gameswf/gameswf_root.cpp: added the locking of gameswf engine into advance()
	* gameswf/samples/video.(fla,swf): updated, added onStatus function
	* gameswf/win32/VC8/gameswf.vcproj: added new files
	* gameswf/gameswf_as_classes/as_netstream.(cpp,h): added on_status handler
	* gameswf/gameswf_as_classes/as_netconnection.(cpp,h): added 
	NetConnection class for local file system
	
2007-03-03  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_action.cpp: fixed #1229756 bug

2007-03-03  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_movie.h: added get_member("_target") &
	set_member("_name")
	* gameswf/gameswf_impl.cpp: commented set_name("_root"),
	by default root has no name
	* gameswf/gameswf_action.cpp: removed assert from trace when object==null
	because it's not error but warning

2007-03-01  Vitaly Alexeev <tishka92@yahoo.com>

	Re-structuring
	* gameswf/gameswf_as_classes/as_netstream.(cpp,h):
	as_global_netstream_ctor moved from action.cpp
	* gameswf/gameswf_as_classes/as_string.(cpp,h),
	* gameswf/gameswf_as_classes/as_textformat.(cpp,h):
	added new files, moved from gameswf_textformat & gameswf_string
	* gameswf/gameswf_string.(cpp,h),
	* gameswf/gameswf_textformat.(cpp,h): removed
	* /gameswf/gameswf_dlist.cpp:
	commented <log_error("remove_display_object: no characters in display list\n")>
	because it's not error
	* gameswf/gameswf_text.cpp,
	* gameswf/gameswf_xml.cpp: updated #includes
	* gameswf/gameswf_action.cpp: math moved to as_classes folder
	* gameswf/win32/VC8/gameswf.vcproj: removed unused files & added new files
